# memorylane

./: COMPETITIVE_ROADMAP.md  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
public/: landing.html
scripts/: tauri-dev.mjs
src/: App.css  App.tsx
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/tesseract/: README.txt
src-tauri/src/: lib.rs
src-tauri/windows/: hooks.nsh
