[package]
name = "memorylane"
version = "0.1.0"
description = "MemoryLane local-first screenshot journal for Windows"
authors = ["MemoryLane Contributors"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "memorylane_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["startup-on-boot"]
startup-on-boot = []

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
screenshots = "0.8"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"

